--- a/css/index.css
+++ b/css/index.css
@@ -406,6 +406,7 @@ a:visited {
 	font-family: "HelveticaNeue-UltraLight", Helvetica, sans-serif;
 	font-style: italic;
 	font-weight: 100;
+	transition: opacity .25s ease-in-out;
 }
 
 #brand:hover {
