--- a/css/resume.css
+++ b/css/resume.css
@@ -1,152 +1,26 @@
-@media (max-width: 700px) {
-	.navbar ul li.menu {
-		display: none
-	}
+@media (max-width: 630px) {
 
-	.brand {
-		top: 11px;
-		left: 10px;
+	#brand {
+		padding-left: 15px;
 		font-size: 150%;
 	}
 
-	#icons {
-		left: 210px;
-	}
-
-	.navbar ul li.mobileMenu {
-		position: absolute;
-		top: 9px;
-		right: 0px;
-		padding-right: 10px;
-		display: block;
-	}
-
-	.mobileMenu ul {
-		position: absolute;
-		top: 42px;
-		right: 0;
-		text-align: left;
-	}
-	.mobileMenu li {
+	.desktop {
 		display: none;
-		background-color: white;
-		font-size: 130%;
-		padding: 5px 0px 5px 10px;
-		opacity: .70;
 	}
 
-	.mobileMenu li  a {
-		display: block;
-	}
-
-	.mobileMenu li:hover {
-		color: black;
-		opacity: .40;
-	}
-
-}
-
-@media (min-width: 701px ) and (max-width: 900px) {
-
-}
-
-@media (min-width: 701px ) and (max-width: 1100px) {
-	.brand {
-		left: 10px;
-	}
-
-	#icons {
-		left: 190px;
-	}
-
-}
-
-@media (min-width: 901px ) and (max-width: 1300px) {
-
-}
-
-
-
-@media (min-width: 1101px ) and (max-width: 1550px) {
-	.brand {
-		left: 10px;
-	}
-
-	#icons {
-		left: 190px;
+	#menu-wrap {
+		width: 40px;
+		padding-right: 15px;
 	}
 
 }
 
 
-@media (min-width: 1551px ) and (max-width: 1900px) {
-	.brand {
-		left: 10px;
-	}
-
-	#icons {
-		left: 190px;
-	}
-
-}
-
-@media (min-width: 1901px ) and (max-width: 2300px) {
-	.last {
-		margin-right: 22%;
-	}	
-
-	.brand {
-		left: 22%;
-	}
-
-	#icons {
-		left: 31%;
-	}
-
-}
-
-@media (min-width: 2301px ) and (max-width: 2800px) {
-	.last {
-		margin-right: 23%;
-	}
-
-	.brand {
-		left: 23%;
-	}
-
-	#icons {
-		left: 31%;
-	}
-
-}
-
-@media (min-width: 2801px) {
-	.last {
-		margin-right: 26%;
-	}
-
-	.brand {
-		left: 26%;
-	}
-
-	#icons {
-		left: 32%;
-	}
-
-}
-
-
-@media (min-width: 701px) {
-	.navbar li {
-		font-size: 110%;
-		display: inline;
-		color: #18453B;
-		padding: 0px 10px 0px 10px;
-	}
-
-	.brand {
-		font-size: 130%;
-		top: 13px;
+@media (max-width:900px) and (min-width:631px) {
+	#brand {
+		padding-left: 25px;
+		font-size: 250%;
 	}
 
 	.navbar li:hover {
@@ -155,52 +29,81 @@
 
 	}
 
-	.navbar ul li.mobileMenu {
-		display: none;
-		font-size: 110%;
-		color: #18453B;
+	#menu-wrap {
+		width: 165px;
+		padding-right: 25px;
 	}
 }
 
+@media (max-width: 1300px) and (min-width: 901px){
+	#brand {
+		padding-left: 50px;
+		font-size: 250%;
+	}
+
+	.navbar li:hover {
+		color: black;
+		opacity: .40;
+
+	}
+
+	#menu-wrap {
+		width: 165px;
+		padding-right: 50px;
+	}
+
+	#contact-icon-wrap {
+		width: 100%;
+	}
+
+}
+
+@media (min-width: 1301px) {
+	#brand {
+		padding-left: 50px;
+		font-size: 250%;
+	}
+
+	.navbar li:hover {
+		color: black;
+		opacity: .40;
+
+	}
+
+	#menu-wrap {
+		width: 165px;
+		padding-right: 50px;
+	}
+
+}
+
+
+
 body {
-	margin: 0px 0px 0px 0px;
+	margin: 70px 0px 0px 0px;
+	display: flex;
+	display: -webkit-flex;
+	align-items: center;
+	-webkit-align-items: center;
+  	justify-content: center;
+  	-webkit-justify-content: center;
+  	background-color: #2B3A42;
+
 }
 
-.brand {
-	position: absolute;
-	color: #18453B;
-	
-	font-family: "Trebuchet MS", Helvetica, sans-serif;
-}
-
-.brand:hover {
-	cursor: pointer;
-	opacity: .40;
-}
-
-#icons {
-	position: absolute;
-	top: 13px;
-	display: inline;
-}
-
-.github, .twitter, .linkedin {
+.icon {
 	transition: opacity .25s ease-in-out;
+	width: 40px;
+	height: 40px;
 }
 
-.github:hover {
+.icon:hover {
 	opacity: .5;
 	cursor: pointer;
 }
 
-.linkedin:hover {
-	opacity: .5;
-	cursor: pointer;
-}
-
-.twitter:hover {
-	opacity: .5;
-	cursor: pointer;
+#twitter {
+	padding: 0px 22px 0px 22px;
 }
 
 a {
@@ -216,28 +119,58 @@ a:visited {
 
 }
 
-li {
-	list-style-type: none;
-}
-
 .navbar {
     position: fixed;
-    z-index: 999;
-	font-family: "Trebuchet MS", Helvetica, sans-serif;
-	text-align: right;
-	background-color: white;
-	border-bottom-style: solid;
-	border-bottom-width: 1px;
-	height: 50px;
+    background-color: #2B3A42;
     top: 0;
     right: 0;
     left: 0;
+    z-index: 999;
+	font-family: "Trebuchet MS", Helvetica, sans-serif;
+	height: 70px;
+
+}
+
+#nav-wrap {
+	display: flex;
+	background-color: inherit;
+	color: #BDD4DE;
+	display: -webkit-flex;
+	height: 100%;
+	align-items: center;
+	-webkit-align-items: center;
+	justify-content: space-between;
+	-webkit-justify-content: space-between;
+}
+
+#brand-wrap {
+	display: flex;
+	display: -webkit-flex;
+}
+
+#brand {
+	color: #BDD4DE;
+	padding-right: 10px;
+	font-family: "HelveticaNeue-UltraLight", Helvetica, sans-serif;
+	font-style: italic;
+	font-weight: 100;
+	transition: opacity .25s ease-in-out;
+}
+
+#brand:hover {
+	cursor: pointer;
+	opacity: .40;
+}
+
+#menu-wrap {
+	display: flex;
+	display: -webkit-flex;
+	justify-content: space-between;
+	-webkit-justify-content: space-between;
+	margin-top: 25px;
 }
 
 #wrap {
-	margin-top: 51px;
-}
-
-object {
-	height: 95vh;
+	width: 100%;
+	height: 100vh;
 }
