--- a/css/index.css
+++ b/css/index.css
@@ -527,8 +527,9 @@ a:visited {
 #work-title {
 	width: 300px;
 	padding: 0px;
-	font-family: "HelveticaNeue", Helvetica, sans-serif;
-	font-weight: 500;
+	font-family: "HelveticaNeue-UltraLight", Helvetica, sans-serif;
+	font-style: italic;
+	font-weight: 200;
 	color: #F15623;
     -ms-transform: skew(0deg, 10deg);
     -webkit-transform: skew(0deg, 10deg);
@@ -572,8 +573,9 @@ a:visited {
 }
 
 #project-title {
-	font-family: "HelveticaNeue", Helvetica, sans-serif;
-	font-weight: 500;
+	font-family: "HelveticaNeue-UltraLight", Helvetica, sans-serif;
+	font-style: italic;
+	font-weight: 200;
 	color: #F15623;
 
 }
@@ -649,8 +651,9 @@ a:visited {
 #contact-title {
 	text-align: center;
 	margin-bottom: 100px;
-	font-family: "HelveticaNeue", Helvetica, sans-serif;
-	font-weight: 500;
+	font-family: "HelveticaNeue-UltraLight", Helvetica, sans-serif;
+	font-style: italic;
+	font-weight: 200;
 	color: #F15623;
 }
 
