--- a/css/resume.css
+++ b/css/resume.css
@@ -110,10 +110,6 @@ a {
 	color: inherit;
 }
 
-a:link {
-    text-decoration: none;
-}
-
 a:visited {
     text-decoration: none;
 
@@ -172,5 +168,19 @@ a:visited {
 
 #wrap {
 	width: 100%;
-	height: 100vh;
+	height: 100%;
+	display: flex;
+	display: -webkit-flex;
+	justify-content: center;
+	-webkit-justify-content: center;
+}
+
+h1 {
+	width: 100%;
+	text-align: center;
+	margin-top: 100px;
+	font-size: 200%;
+	color: #BDD4DE;
+	font-family: "HelveticaNeue", Helvetica, sans-serif;
+	font-weight: 100;
 }
