--- a/css/resume.css
+++ b/css/resume.css
@@ -168,7 +168,7 @@ a:visited {
 
 #wrap {
 	width: 100%;
-	height: 100%;
+	height: 100vh;
 	display: flex;
 	display: -webkit-flex;
 	justify-content: center;
