--- a/css/index.css
+++ b/css/index.css
@@ -381,6 +381,12 @@ a:visited {
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
 	height: 70px;
 
+	border-bottom: 1px solid transparent;
+	transition: border-color .5s linear;
+	-moz-transition: border-color .5s linear;    /* FF3.7+ */
+	-o-transition: border-color .5s linear;      /* Opera 10.5 */
+	-webkit-transition: border-color .5s linear; /* Saf3.2+, Chrome */
+
 }
 
 #nav-wrap {
