--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,25 +1,29 @@
-/* line 1, ../sass/index.scss */
+/* Whites */
+/* Blacks */
+/* Grays */
+/* Blues */
+/* line 3, ../sass/index.scss */
 body {
   margin: 0 auto;
   padding: 0;
   text-align: center;
 }
 
-/* line 7, ../sass/index.scss */
+/* line 9, ../sass/index.scss */
 nav {
   background-color: #fff;
   border-bottom: 2px solid #dadada;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-family: ubuntu;
+  font-family: Ubuntu;
   font-weight: 300;
   height: 50px;
   position: fixed;
   width: 100%;
   z-index: 1000;
 }
-/* line 18, ../sass/index.scss */
+/* line 20, ../sass/index.scss */
 nav ul {
   -ms-flex-line-pack: center;
       align-content: center;
@@ -28,12 +32,12 @@ nav ul {
   margin: 0;
   padding: 0;
 }
-/* line 26, ../sass/index.scss */
+/* line 28, ../sass/index.scss */
 nav li {
   float: left;
   line-height: 50px;
 }
-/* line 30, ../sass/index.scss */
+/* line 32, ../sass/index.scss */
 nav li img {
   border: 1px solid #4a90e2;
   border-radius: 100px;
@@ -41,7 +45,7 @@ nav li img {
   margin: auto;
   width: 25px;
 }
-/* line 38, ../sass/index.scss */
+/* line 40, ../sass/index.scss */
 nav li a {
   color: inherit;
   padding: 16px;
@@ -49,26 +53,7 @@ nav li a {
   text-align: center;
   text-decoration: none;
 }
-/* line 46, ../sass/index.scss */
-nav li#home,
-nav li a::after {
-  background-color: #4a90e2;
-  bottom: 0;
-  content: '';
-  height: 2px;
-  left: 0;
-  opacity: 0;
-  position: absolute;
-  -webkit-transition: opacity 0.25s linear;
-  transition: opacity 0.25s linear;
-  width: 100%;
-}
-/* line 61, ../sass/index.scss */
-nav li#home:hover::after,
-nav li a:hover::after {
-  opacity: 1;
-}
-/* line 66, ../sass/index.scss */
+/* line 48, ../sass/index.scss */
 nav li#home {
   -ms-flex-line-pack: center;
       align-content: center;
@@ -85,31 +70,50 @@ nav li#home {
   transition: width 1.75s ease-in-out;
   width: 28px;
 }
-/* line 77, ../sass/index.scss */
+/* line 60, ../sass/index.scss */
 nav li#home:hover {
   width: 100%;
 }
-/* line 82, ../sass/index.scss */
+/* line 64, ../sass/index.scss */
 nav li span {
   height: 28px;
   line-height: 28px;
   margin: auto auto auto 16px;
 }
+/* line 71, ../sass/index.scss */
+li nav#home,
+nav li a::after {
+  background-color: #4a90e2;
+  bottom: 0;
+  content: '';
+  height: 2px;
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  -webkit-transition: opacity .3s linear;
+  transition: opacity .3s linear;
+  width: 100%;
+}
+/* line 86, ../sass/index.scss */
+li nav#home:hover::after,
+nav li a:hover::after {
+  opacity: 1;
+}
 
-/* line 90, ../sass/index.scss */
+/* line 92, ../sass/index.scss */
 #intro {
   padding-top: 125px;
 }
-/* line 93, ../sass/index.scss */
+/* line 95, ../sass/index.scss */
 #intro h1 {
   color: #1f2833;
-  font-family: ubuntu;
+  font-family: Ubuntu;
   font-size: 24px;
   font-weight: 300;
   margin: 0 0 61px;
   text-align: center;
 }
-/* line 102, ../sass/index.scss */
+/* line 104, ../sass/index.scss */
 #intro #quick-links {
   -ms-flex-line-pack: center;
       align-content: center;
@@ -124,7 +128,7 @@ nav li span {
       -ms-flex-pack: center;
           justify-content: center;
 }
-/* line 109, ../sass/index.scss */
+/* line 111, ../sass/index.scss */
 #intro a {
   color: #4a90e2;
   font-family: Ubuntu;
@@ -134,14 +138,14 @@ nav li span {
   margin: 0 60px 75px 20px;
   position: relative;
   text-decoration: none;
-  -webkit-transition: opacity 0.25s linear;
-  transition: opacity 0.25s linear;
+  -webkit-transition: opacity .25s linear;
+  transition: opacity .25s linear;
 }
-/* line 120, ../sass/index.scss */
+/* line 122, ../sass/index.scss */
 #intro a:last-child {
   margin-right: 0;
 }
-/* line 124, ../sass/index.scss */
+/* line 126, ../sass/index.scss */
 #intro a::before {
   background-color: none;
   border: 1px solid #4a90e2;
@@ -153,20 +157,20 @@ nav li span {
   left: -20px;
   position: absolute;
   top: 0;
-  -webkit-transition: background-color 0.25s linear;
-  transition: background-color 0.25s linear;
+  -webkit-transition: background-color .25s linear;
+  transition: background-color .25s linear;
   width: 15px;
 }
-/* line 139, ../sass/index.scss */
+/* line 141, ../sass/index.scss */
 #intro a:hover {
-  opacity: 0.7;
+  opacity: .7;
 }
-/* line 142, ../sass/index.scss */
+/* line 145, ../sass/index.scss */
 #intro a:hover::before {
   background-color: #4a90e2;
 }
 
-/* line 149, ../sass/index.scss */
+/* line 151, ../sass/index.scss */
 .section-header {
   color: #1f2833;
   font-family: Ubuntu;
@@ -178,7 +182,7 @@ nav li span {
   text-align: left;
   width: 100%;
 }
-/* line 160, ../sass/index.scss */
+/* line 162, ../sass/index.scss */
 .section-header::after {
   background-color: #dadada;
   content: '';
@@ -190,12 +194,12 @@ nav li span {
   z-index: -1;
 }
 
-/* line 172, ../sass/index.scss */
+/* line 174, ../sass/index.scss */
 #projects {
   margin: 0 auto 55px;
   max-width: 1316px;
 }
-/* line 176, ../sass/index.scss */
+/* line 178, ../sass/index.scss */
 #projects #project-wrap {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -207,11 +211,11 @@ nav li span {
   -ms-flex-flow: row wrap;
       flex-flow: row wrap;
 }
-/* line 182, ../sass/index.scss */
+/* line 184, ../sass/index.scss */
 #projects #project-wrap:hover .project:not(:hover) {
-  opacity: 0.5;
+  opacity: .5;
 }
-/* line 186, ../sass/index.scss */
+/* line 188, ../sass/index.scss */
 #projects .project {
   background-color: #fff;
   border: 1px solid #dadada;
@@ -219,15 +223,15 @@ nav li span {
   height: 210px;
   margin: 5px;
   text-align: left;
-  -webkit-transition: all 0.25s linear;
-  transition: all 0.25s linear;
+  -webkit-transition: all .25s linear;
+  transition: all .25s linear;
   width: 317px;
 }
-/* line 196, ../sass/index.scss */
+/* line 198, ../sass/index.scss */
 #projects .project:hover {
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.25);
 }
-/* line 201, ../sass/index.scss */
+/* line 203, ../sass/index.scss */
 #projects .project-name {
   color: #1f2833;
   font-family: Ubuntu;
@@ -238,7 +242,7 @@ nav li span {
   position: relative;
   text-decoration: none;
 }
-/* line 211, ../sass/index.scss */
+/* line 213, ../sass/index.scss */
 #projects .project-name::before {
   background-color: none;
   border: 1px solid #4a90e2;
@@ -251,10 +255,9 @@ nav li span {
   top: 0;
   width: 17px;
 }
-/* line 225, ../sass/index.scss */
+/* line 227, ../sass/index.scss */
 #projects .project-description {
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 4;
   box-shadow: inset 0 -8px 55px -8px #fff;
   color: #1f2833;
   display: -webkit-box;
@@ -262,6 +265,7 @@ nav li span {
   font-size: 12px;
   font-weight: 300;
   height: 80px;
+  -webkit-line-clamp: 4;
   line-height: 20px;
   margin: 20px 20px 35px;
   overflow-y: hidden;
