--- a/assets/stylesheets/scss/partials/_welcome.scss
+++ b/assets/stylesheets/scss/partials/_welcome.scss
@@ -62,20 +62,26 @@
   font-family: Ubuntu;
   font-size: 16px;
   font-weight: 300;
-  line-height: 20px;
-  margin: 0 0 32px;
+  margin: 0 auto 32px;
   position: relative;
   text-align: left;
-  width: 100%;
+  width: calc(100% - 10px);
+
+  .title {
+    background: $white;
+    padding-right: 10px;
+  }
 
   &::after {
     background-color: $alto-gray;
     content: '';
+    display: block;
     height: 1px;
-    left: 0;
-    margin: 10px 0 0 140px;
+    margin: 0;
     position: absolute;
-    width: calc(100% - 140px);
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
     z-index: -1;
   }
 }
