--- a/assets/stylesheets/scss/partials/general/_colors.scss
+++ b/assets/stylesheets/scss/partials/general/_colors.scss
@@ -1,11 +1,14 @@
-/* Whites */
+// Whites
 $white: #fff;
-/* Blacks */
+
+// Blacks
 $very-soft-black: rgba(0, 0, 0, .05);
 $quite-soft-black: rgba(0, 0, 0, .25);
 $black: #000;
-/* Grays */
+
+// Grays
 $alto-gray: #dadada;
 $gun-metal: #1f2833;
-/* Blues */
+
+// Blues
 $united-nations-blue: #4a90e2;
